--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ body .container {
 
 /* js rating_____________________________________________*/
 
-.product-card__rating {
+[class*=__rating] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -601,12 +601,12 @@ body .container {
   line-height: 0.75;
 }
 
-.product-card__rating.rating_sending {
+[class*=__rating].rating_sending {
   opacity: 0.2;
 }
 
-.product-card__rating.rating_set .rating__active,
-.product-card__rating.rating_set .rating__item {
+[class*=__rating].rating_set .rating__active,
+[class*=__rating].rating_set .rating__item {
   cursor: pointer;
 }
 
@@ -1190,6 +1190,505 @@ body .container {
   color: #E8AA31;
 }
 
+/* Fix for this project =======================*/
+
+.header-portfolio__title {
+  text-align: center;
+  font-size: 1.875rem;
+  padding: 2.5rem 0 6.25rem 0;
+}
+
+/* Headings */
+
+/* Main heading for card's front cover */
+
+.card-front__heading {
+  font-size: 1.5rem;
+  margin-top: 0.25rem;
+}
+
+/* Main heading for inside page */
+
+.inside-page__heading {
+  padding-bottom: 1rem;
+  width: 100%;
+}
+
+/* Mixed */
+
+/* For both inside page's main heading and 'view me' text on card front cover */
+
+.inside-page__heading,
+.card-front__text-view {
+  font-size: 1.3rem;
+  font-weight: 800;
+  margin-top: 0.2rem;
+}
+
+.inside-page__heading--city,
+.card-front__text-view--city {
+  color: #ff62b2;
+}
+
+.inside-page__heading--ski,
+.card-front__text-view--ski {
+  color: #2aaac1;
+}
+
+.inside-page__heading--beach,
+.card-front__text-view--beach {
+  color: #fa7f67;
+}
+
+.inside-page__heading--camping,
+.card-front__text-view--camping {
+  color: #00b97c;
+}
+
+/* Front cover */
+
+.card-front__tp {
+  color: #fafbfa;
+}
+
+/* For pricing text on card front cover */
+
+.card-front__text-price {
+  font-size: 1.2rem;
+  margin-top: -0.2rem;
+}
+
+/* Back cover */
+
+/* For inside page's body text */
+
+.inside-page__text {
+  color: #333;
+}
+
+/* Icons ===========================================*/
+
+.card-front__icon {
+  fill: #fafbfa;
+  font-size: 3vw;
+  height: 3.25rem;
+  margin-top: -0.5rem;
+  width: 3.25rem;
+}
+
+/* Buttons =================================================*/
+
+.inside-page__btn {
+  background-color: transparent;
+  border: 3px solid;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-top: 2rem;
+  overflow: hidden;
+  padding: 0.7rem 0.75rem;
+  position: relative;
+  text-decoration: none;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  width: 90%;
+  z-index: 10;
+}
+
+.inside-page__btn::before {
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  -webkit-transform: scaleY(0);
+      -ms-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  width: 100%;
+  z-index: -1;
+}
+
+.inside-page__btn--city {
+  border-color: #ff40a1;
+  color: #ff40a1;
+}
+
+.inside-page__btn--city::before {
+  background-color: #ff40a1;
+}
+
+.inside-page__btn--ski {
+  border-color: #279eb2;
+  color: #279eb2;
+}
+
+.inside-page__btn--ski::before {
+  background-color: #279eb2;
+}
+
+.inside-page__btn--beach {
+  border-color: #fa7f67;
+  color: #fa7f67;
+}
+
+.inside-page__btn--beach::before {
+  background-color: #fa7f67;
+}
+
+.inside-page__btn--camping {
+  border-color: #00b97d;
+  color: #00b97d;
+}
+
+.inside-page__btn--camping::before {
+  background-color: #00b97d;
+}
+
+.inside-page__btn:hover {
+  color: #fafbfa;
+}
+
+.inside-page__btn:hover::before {
+  -webkit-transform: scaleY(1);
+      -ms-transform: scaleY(1);
+          transform: scaleY(1);
+}
+
+/* Layout Structure=========================================*/
+
+.main {
+  background: -webkit-gradient(linear, left top, right bottom, from(#eee8dd), to(#e3d9c6));
+  background: -o-linear-gradient(top left, #eee8dd, #e3d9c6);
+  background: linear-gradient(to bottom right, #eee8dd, #e3d9c6);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  width: 100%;
+}
+
+/* Container to hold all cards in one place */
+
+.card-area {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  height: 100%;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  padding: 1rem;
+}
+
+/* Card ============================================*/
+
+/* Area to hold an individual card */
+
+.card-section {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+
+/* A container to hold the flip card and the inside page */
+
+.card {
+  background-color: rgba(0, 0, 0, 0.05);
+  -webkit-box-shadow: -0.1rem 1.7rem 6.6rem -3.2rem rgba(0, 0, 0, 0.5);
+          box-shadow: -0.1rem 1.7rem 6.6rem -3.2rem rgba(0, 0, 0, 0.5);
+  height: 15rem;
+  position: relative;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  width: 15rem;
+}
+
+/* Flip card - covering both the front and inside front page */
+
+/* An outer container to hold the flip card. This excludes the inside page */
+
+.flip-card {
+  height: 15rem;
+  -webkit-perspective: 100rem;
+          perspective: 100rem;
+  position: absolute;
+  right: 0;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  visibility: hidden;
+  width: 15rem;
+  z-index: 100;
+}
+
+/* The outer container's visibility is set to hidden. This is to make everything within the container NOT set to hidden  */
+
+/* This is done so content in the inside page can be selected */
+
+.flip-card > * {
+  visibility: visible;
+}
+
+/* An inner container to hold the flip card. This excludes the inside page */
+
+.flip-card__container {
+  height: 100%;
+  position: absolute;
+  right: 0;
+  -webkit-transform-origin: left;
+      -ms-transform-origin: left;
+          transform-origin: left;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  width: 100%;
+  padding: 0;
+}
+
+.card-front,
+.card-back {
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
+/* Styling for the front side of the flip card */
+
+/* container for the front side */
+
+.card-front {
+  background-color: #fafbfa;
+  height: 15rem;
+  width: 15rem;
+}
+
+/* Front side's top section */
+
+.card-front__tp {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 57% 90%, 50% 100%, 43% 90%, 0 90%);
+          clip-path: polygon(0 0, 100% 0, 100% 90%, 57% 90%, 50% 100%, 43% 90%, 0 90%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 12rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0.75rem;
+}
+
+.card-front__logo {
+  color: #fff;
+  font-size: 2.5rem;
+  padding-bottom: 0.625rem;
+}
+
+.card-front__tp--city {
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff73b9), to(#ff40a1));
+  background: -o-linear-gradient(top, #ff73b9, #ff40a1);
+  background: linear-gradient(to bottom, #ff73b9, #ff40a1);
+}
+
+.card-front__tp--ski {
+  background: -webkit-gradient(linear, left top, left bottom, from(#47c2d7), to(#279eb2));
+  background: -o-linear-gradient(top, #47c2d7, #279eb2);
+  background: linear-gradient(to bottom, #47c2d7, #279eb2);
+}
+
+.card-front__tp--beach {
+  background: -webkit-gradient(linear, left top, left bottom, from(#fb9b88), to(#f86647));
+  background: -o-linear-gradient(top, #fb9b88, #f86647);
+  background: linear-gradient(to bottom, #fb9b88, #f86647);
+}
+
+.card-front__tp--camping {
+  background: -webkit-gradient(linear, left top, left bottom, from(#00db93), to(#00b97d));
+  background: -o-linear-gradient(top, #00db93, #00b97d);
+  background: linear-gradient(to bottom, #00db93, #00b97d);
+}
+
+/* Front card's bottom section */
+
+.card-front__bt {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* Styling for the back side of the flip card */
+
+.card-back {
+  background-color: #fafbfa;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+/* Specifically targeting the <video> element */
+
+.video__container {
+  -webkit-clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%);
+          clip-path: polygon(0% 0%, 100% 0%, 90% 50%, 100% 100%, 0% 100%);
+  height: auto;
+  min-height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  padding: 0;
+}
+
+/* Inside page */
+
+.inside-page {
+  background-color: #fafbfa;
+  -webkit-box-shadow: inset 20rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.25);
+          box-shadow: inset 20rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.25);
+  height: 100%;
+  padding: 1rem;
+  position: absolute;
+  right: 0;
+  -webkit-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+  width: 15rem;
+  z-index: 1;
+}
+
+.inside-page__container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  text-align: center;
+  width: 100%;
+  padding: 0;
+}
+
+/* Functionality ====================================*/
+
+/* This is to keep the card centered (within its container) when opened */
+
+.card:hover {
+  -webkit-box-shadow: -0.1rem 1.7rem 6.6rem -3.2rem rgba(0, 0, 0, 0.75);
+          box-shadow: -0.1rem 1.7rem 6.6rem -3.2rem rgba(0, 0, 0, 0.75);
+  width: 30rem;
+}
+
+/* When the card is hovered, the flip card container will rotate */
+
+.card:hover .flip-card__container {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+  padding: 0;
+}
+
+/* When the card is hovered, the shadow on the inside page will shrink to the left */
+
+.card:hover .inside-page {
+  -webkit-box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.1);
+          box-shadow: inset 1rem 0px 5rem -2.5rem rgba(0, 0, 0, 0.1);
+}
+
+.quantity {
+  width: 150px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px solid rgba(166, 166, 166, 0.45);
+  position: relative;
+}
+
+.quantity__button {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50px;
+          flex: 0 0 50px;
+  height: 50px;
+  position: relative;
+  cursor: pointer;
+  background-color: #000;
+}
+
+.quantity__button::before,
+.quantity__button::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  margin: 0 0 0 -4.5px;
+  background-color: #a6a6a6;
+  width: 9px;
+  height: 1px;
+}
+
+.quantity__input {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.quantity__input input {
+  width: 50px;
+  text-align: center;
+}
+
 body {
   font-weight: 500;
   font-family: "Montserrat";
@@ -1255,6 +1754,13 @@ body {
           box-shadow: none;
 }
 
+.button_black {
+  background-color: #000;
+  color: #fff;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .title {
   font-weight: 700;
   font-size: 1.5rem;
@@ -1263,6 +1769,10 @@ body {
 
 .title:not(:last-child) {
   margin-bottom: 1.5625rem;
+}
+
+.text-fix {
+  font-family: "Montserrat";
 }
 
 .page__inner {
@@ -3274,6 +3784,187 @@ body {
   padding: 1.875rem;
 }
 
+.main-product {
+  display: -ms-grid;
+  display: grid;
+  gap: 1.875rem;
+  padding-bottom: 120px;
+}
+
+.images-product {
+  display: -ms-grid;
+  display: grid;
+  gap: 1rem;
+}
+
+.images-product__slide-ibg {
+  padding-bottom: 76.525198939%;
+  cursor: pointer;
+}
+
+.thumbs-image__slide-ibg {
+  padding-bottom: 23.474801061%;
+  cursor: pointer;
+  opacity: 0.5;
+  -webkit-transition: opacity 0.3s ease 0s;
+  -o-transition: opacity 0.3s ease 0s;
+  transition: opacity 0.3s ease 0s;
+}
+
+.thumbs-image__slide-ibg.swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.body-product {
+  background: #FEFEFE;
+  -webkit-box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  padding: 1.875rem;
+}
+
+.body-product__header {
+  border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+  padding: 0 0 1.875rem 0;
+}
+
+.body-product__table {
+  border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+  padding: 1.875rem 0;
+}
+
+.body-product__options {
+  border-bottom: 1px solid rgba(20, 20, 20, 0.15);
+  padding: 1.875rem 0;
+}
+
+.body-product__actions {
+  padding: 1.875rem 0 0 0;
+}
+
+.header-product__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.25rem;
+}
+
+.header-product__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.2083333333;
+  color: #141414;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.header-product__title:not(:last-child) {
+  margin-bottom: 0.625rem;
+}
+
+.header-product__link {
+  font-size: 24px;
+  color: #141414;
+}
+
+.table-product {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 12.5rem 1fr;
+  grid-template-columns: 12.5rem 1fr;
+  gap: 1.25rem;
+}
+
+.table-product__lable {
+  font-size: 18px;
+  line-height: 1.2222222222;
+  color: #141414;
+}
+
+.table-product__value {
+  font-size: 18px;
+  line-height: 1.2222222222;
+  color: rgba(20, 20, 20, 0.5);
+}
+
+.options-product {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 12.5rem 1fr;
+  grid-template-columns: 12.5rem 1fr;
+  gap: 1.25rem;
+}
+
+.options-product__label {
+  font-size: 18px;
+  line-height: 1.2222222222;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.options-product__value {
+  font-size: 1.125rem;
+  line-height: 1.2222222222;
+}
+
+.options-product__value select {
+  max-width: 23.75rem;
+  width: 100%;
+  border: 1px solid rgba(4, 4, 4, 0.3);
+  border-radius: 3px;
+  height: 2.5rem;
+  font-size: 1.125rem;
+  color: rgba(4, 4, 4, 0.3);
+}
+
+.actions-product__price {
+  font-weight: 700;
+  font-size: 1.875rem;
+  line-height: 1.2333333333;
+  padding: 0 1.875rem 0 0;
+}
+
+.actions-product__price:not(:last-child) {
+  margin-bottom: 1.875rem;
+}
+
+.actions-product__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.25rem;
+}
+
+.actions-product__buttons {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1.25rem;
+}
+
+.actions-product__cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.actions-product__cart span::before {
+  margin: 0 0 0 1.25rem;
+}
+
 @media (min-width: 29.99875em) {
   .body-header__serch {
     padding-left: 158px;
@@ -3370,6 +4061,11 @@ body {
     -ms-grid-columns: 23.4375rem 1fr;
     grid-template-columns: 23.4375rem 1fr;
   }
+
+  .main-product {
+    -ms-grid-columns: 49.0625% 1fr;
+    grid-template-columns: 49.0625% 1fr;
+  }
 }
 
 @media (min-width: 75em) {
@@ -3381,6 +4077,14 @@ body {
         -ms-flex-pack: justify;
             justify-content: space-between;
     gap: 1.25rem;
+  }
+}
+
+@media (min-width: 95em) {
+  .actions-product__buttons {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
 }
 
@@ -3531,6 +4235,19 @@ body {
 
   .catalog {
     padding-bottom: calc(40px + 80 * ((100vw -320px) / 1270));
+  }
+
+  .main-product {
+    padding-bottom: calc(40px + 80 * ((100vw -320px) / 1270));
+  }
+}
+
+@media (max-width: 95em) {
+  .actions-product__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
@@ -3890,6 +4607,11 @@ body {
 }
 
 @media (any-hover: hover) {
+  .quantity__button:hover::before,
+  .quantity__button:hover::after {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
   .button:hover {
     -webkit-box-shadow: 0px 4px 25px rgba(232, 170, 49, 0.65);
             box-shadow: 0px 4px 25px rgba(232, 170, 49, 0.65);
